Chanes to convert between co-ordinate systems and fixes for square grid rendering